# snip2text

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: capture.rs  config.rs  main.rs  ocr.rs
