[package]
name = "snip2text"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snip2text"
path = "src/main.rs"

[dependencies]
winit = "0.30"
tray-icon = "0.17"
global-hotkey = "0.6"
softbuffer = "0.4"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]
